--- a/pistasTenis.html
+++ b/pistasTenis.html
@@ -28,6 +28,7 @@
                     <img src="./images/logoLMFM.png" title="mejoryoutuberjajaja" width="100px" height="100px">
                     <p>Haz click ya mismo o te arrepentiras toda tu vida</p>
                 </a>
+                <button>X</button>
             </div>
         </nav>
         <main>
@@ -122,6 +123,7 @@
                     <img src="./images/a0084845941_10.jpg" title="Ulrakill" width="120px" height="120px">
                     <p>¡COMPRALO YA MISMO!</p>
                 </a>
+                <button>X</button>
             </div>
         </aside>
     </div>
